# arbitraitor

./: .cog.toml  .gitignore  .mcp.json  .mise.toml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  action.yml  deny.toml  flake.nix  lefthook.yml  rumdl.toml
.cargo/: config.toml
.config/: hakari.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_proposal.yml
.github/workflows/: ci.yml  code.yml  codeql.yml  docs.yml  invariants.yml  markdown.yml  release.yml  security.yml
.serena/: project.yml
book/: book.toml
book/src/: SUMMARY.md  cli-reference.md  comparison.md  configuration.md  contributing.md  getting-started.md  introduction.md  security.md
crates/arbitraitor-analysis/: Cargo.toml
crates/arbitraitor-analysis/src/: dep_vuln.rs  lib.rs  mandatory.rs  payload_graph.rs  pyjs.rs  tests.rs  tirith.rs  url_discovery.rs
crates/arbitraitor-analysis/tests/: dep_vuln.rs
crates/arbitraitor-archive/: Cargo.toml
crates/arbitraitor-archive/src/: companion.rs  lib.rs  payload.rs  tests.rs
crates/arbitraitor-artifact/: Cargo.toml
crates/arbitraitor-av/: Cargo.toml
crates/arbitraitor-av/src/: defender.rs  defender_tests.rs  lib.rs  macos.rs
crates/arbitraitor-cli/: Cargo.toml
crates/arbitraitor-cli/src/: approval.rs  commands.rs  main.rs  pipeline.rs  pm.rs  shim.rs  shim_tests.rs  tests.rs
crates/arbitraitor-cli/src/approval/: tests.rs
crates/arbitraitor-cli/src/commands/: doctor_command.rs
crates/arbitraitor-cli/src/run/: mod.rs  run_services.rs  run_tests.rs
crates/arbitraitor-cli/tests/: analysis_pipeline.rs  cli_inspect.rs  cli_smoke.rs  cli_wrappers_init.rs  pipeline_e2e.rs  threat_model_adversaries.rs
crates/arbitraitor-core/: Cargo.toml
crates/arbitraitor-core/src/: config.rs  lib.rs  metrics.rs  privilege.rs  renderer.rs  secret.rs  tests.rs
crates/arbitraitor-core/src/health/: mod.rs  store_probe.rs  tests.rs
crates/arbitraitor-daemon/: Cargo.toml
crates/arbitraitor-exec/: Cargo.toml
crates/arbitraitor-exec/src/: lib.rs  native.rs  powershell.rs  release.rs  script.rs  spawn.rs  tests.rs
crates/arbitraitor-exec/tests/: execution_context.rs
crates/arbitraitor-fetch/: Cargo.toml
crates/arbitraitor-fetch/src/: lib.rs
crates/arbitraitor-fetch/tests/: child_artifacts.rs  fetcher.proptest-regressions  fetcher.rs
crates/arbitraitor-intel/: Cargo.toml
crates/arbitraitor-intel/src/: adapters.rs  feed.rs  governance.rs  lib.rs  ossf_malicious.rs  review.rs  submission.rs  tests.rs  transparency.rs  urlhaus.rs  workflow.rs
crates/arbitraitor-intel/tests/: ingest.rs
crates/arbitraitor-mcp/: Cargo.toml
crates/arbitraitor-mcp/src/: explain.rs  lib.rs  tests.rs
crates/arbitraitor-model/: Cargo.toml
crates/arbitraitor-model/src/: artifact.rs  exit_code.rs  finding.rs  ids.rs  lib.rs  operation.rs  origin.rs  osv.rs  taxonomy.rs  transport.rs  verdict.rs  vex.rs
crates/arbitraitor-model/tests/: origin.rs  taxonomy.rs
crates/arbitraitor-package-manager/: Cargo.toml
crates/arbitraitor-package-manager/src/: bun.rs  cargo.rs  error.rs  lib.rs  lifecycle.rs  npm.rs  pnpm.rs  receipt.rs  recipe.rs  uv.rs  yarn_berry.rs  yarn_classic.rs
crates/arbitraitor-package-manager/src/advisory/: mod.rs  tests.rs
crates/arbitraitor-package-manager/tests/: scaffold.rs
crates/arbitraitor-plugin-api/: Cargo.toml
crates/arbitraitor-plugin-api/src/: lib.rs
crates/arbitraitor-plugin-host/: Cargo.toml  build.rs
crates/arbitraitor-plugin-host/src/: admission.rs  error.rs  executor.rs  frame.rs  lib.rs  manifest.rs  protocol.rs  registry.rs  wasm_engine.rs  wasm_plugin.rs  wasm_plugin_bindings.rs
crates/arbitraitor-plugin-host/src/executor/: message.rs  plugin.rs  process.rs
crates/arbitraitor-plugin-host/src/test_fixtures/: trap_detector.wasm  valid_detector.wasm
crates/arbitraitor-plugin-host/tests/: executor.rs  wit_validation.rs
crates/arbitraitor-plugin-host/tests/mock_plugin/src/: main.rs
crates/arbitraitor-policy/: Cargo.toml
crates/arbitraitor-powershell/: Cargo.toml
crates/arbitraitor-powershell/src/: lib.rs
crates/arbitraitor-receipt/: Cargo.toml
crates/arbitraitor-receipt/src/: lib.rs  migration.rs  signing.rs
crates/arbitraitor-receipt/tests/: finding_summary.rs
crates/arbitraitor-sandbox/: Cargo.toml
crates/arbitraitor-sandbox/src/: landlock.rs  lib.rs  linux_adapters.rs  observed.rs  resource_limits.rs  seccomp.rs  windows_adapters.rs
crates/arbitraitor-shell/: Cargo.toml
crates/arbitraitor-shell/src/: detection.rs  detection_credential.rs  detection_destructive.rs  detection_system.rs  explain.rs  lib.rs  normalization.rs  process_sub.rs  shellcheck.rs  shellcheck_subprocess.rs  templates.rs  tests.rs
crates/arbitraitor-shell/tests/: detection.rs  detection_credential.rs  detection_destructive.rs  detection_system.rs  normalization.rs
crates/arbitraitor-store/: Cargo.toml
crates/arbitraitor-store/src/: gc.rs  lib.rs  metadata.rs  nonce.rs  retention.rs  tests.rs
crates/arbitraitor-store/src/gc/: tests.rs
crates/arbitraitor-store/src/metadata/: tests.rs
crates/arbitraitor-store/src/nonce/: tests.rs
crates/arbitraitor-testkit/: Cargo.toml
crates/arbitraitor-testkit/src/: assert.rs  corpus.rs  fixtures.rs  https_tests.rs  lib.rs  mock_server.rs  network.rs  ssrf_tests.rs
crates/arbitraitor-update/: Cargo.toml
crates/arbitraitor-update/src/: error.rs  lib.rs  manifest.rs  rollback.rs  verifier.rs
crates/arbitraitor-wrapper/: Cargo.toml
crates/arbitraitor-wrapper/src/: error.rs  init.rs  lib.rs  shim.rs  wget.rs
crates/arbitraitor-yarax/: Cargo.toml
crates/arbitraitor-yarax/rules/: known-bad-urls.yar  suspicious-shell.yar
crates/arbitraitor-yarax/src/: lib.rs  tests.rs
crates/xtask/: Cargo.toml
docs/: conventions.md  doc-ownership.md  mvp-roadmap.md
fixtures/: .gitkeep
fuzz/: .gitkeep
rules/: .gitkeep
schemas/: .gitkeep
wit/: .gitkeep  arbitraitor-plugin.wit
(+126 files in other folders)
