[package]
name = "arbitraitor-analysis"
description = "Detector coordination for the analysis pipeline"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-artifact = { workspace = true }
arbitraitor-core = { workspace = true }
arbitraitor-model = { workspace = true }
arbitraitor-shell = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
