[package]
name = "arbitraitor-analysis"
description = "Detector coordination for the analysis pipeline"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-artifact = { workspace = true }
arbitraitor-archive = { workspace = true }
arbitraitor-core = { workspace = true }
arbitraitor-intel = { workspace = true }
arbitraitor-model = { workspace = true }
arbitraitor-sandbox = { workspace = true }
arbitraitor-shell = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
