[package]
name = "arbitraitor-archive"
description = "Archive inspection and decompression under resource limits"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-artifact = { workspace = true }
arbitraitor-model = { workspace = true }
bzip2 = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
xz2 = { workspace = true }
zip = { workspace = true }
zstd = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
