[package]
name = "arbitraitor-cli"
description = "Command-line interface for Arbitraitor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "arbitraitor"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
arbitraitor-analysis = { workspace = true }
arbitraitor-archive = { workspace = true }
arbitraitor-artifact = { workspace = true }
arbitraitor-core = { workspace = true }
arbitraitor-daemon = { workspace = true }
arbitraitor-exec = { workspace = true }
arbitraitor-fetch = { workspace = true }
arbitraitor-intel = { workspace = true }
arbitraitor-mcp = { workspace = true }
arbitraitor-model = { workspace = true }
arbitraitor-policy = { workspace = true }
arbitraitor-provenance = { workspace = true }
arbitraitor-receipt = { workspace = true }
arbitraitor-shell = { workspace = true }
arbitraitor-store = { workspace = true }
arbitraitor-update = { workspace = true }
arbitraitor-wrapper = { workspace = true }
arbitraitor-yarax = { workspace = true }
clap = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
zip = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
arbitraitor-analysis = { workspace = true }
arbitraitor-model = { workspace = true }
arbitraitor-testkit = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
