[package]
name = "arbitraitor-exec"
description = "Execution broker for approved artifacts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-core = { workspace = true }
arbitraitor-model = { workspace = true }
cap-tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
