[package]
name = "arbitraitor-exec"
description = "Execution broker for approved artifacts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-core = { workspace = true }
arbitraitor-artifact = { workspace = true }
arbitraitor-model = { workspace = true }
arbitraitor-sandbox = { workspace = true }
arbitraitor-store = { workspace = true }
cap-std = { workspace = true }
cap-tempfile = { workspace = true }
libc = { workspace = true }
rustix = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
