[package]
name = "arbitraitor-fetch"
description = "HTTP retrieval and transport policy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-archive = { workspace = true }
arbitraitor-artifact = { workspace = true }
arbitraitor-model = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["stream"] }
secrecy = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
arbitraitor-testkit = { workspace = true }
flate2 = { workspace = true }
proptest = { workspace = true }
zip = { workspace = true }
