[package]
name = "arbitraitor-intel"
description = "Threat intelligence feed management"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-fetch = { workspace = true }
arbitraitor-model = { workspace = true }
async-trait = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
