[package]
name = "arbitraitor-mcp"
description = "MCP and AI agent gateway integration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-analysis = { workspace = true }
arbitraitor-core = { workspace = true }
arbitraitor-exec = { workspace = true }
arbitraitor-fetch = { workspace = true }
arbitraitor-model = { workspace = true }
arbitraitor-receipt = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
