[package]
name = "arbitraitor-model"
description = "Serializable domain types and newtypes for Arbitraitor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
proptest = { workspace = true }
