[package]
name = "arbitraitor-package-manager"
description = "Package manager lifecycle adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-model = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
sha2 = { workspace = true }
