[package]
name = "arbitraitor-plugin-host"
description = "Wasmtime and subprocess plugin runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "arbitraitor-plugin-host-mock-plugin"
path = "tests/mock_plugin/src/main.rs"
test = false
bench = false
doc = false

[dependencies]
arbitraitor-exec = { workspace = true }
arbitraitor-model = { workspace = true }
arbitraitor-plugin-api = { workspace = true }
arbitraitor-sandbox = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
