[package]
name = "arbitraitor-plugin-host"
description = "Wasmtime and subprocess plugin runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
experimental-wasm = ["dep:wasmtime"]

[[bin]]
name = "arbitraitor-plugin-host-mock-plugin"
path = "tests/mock_plugin/src/main.rs"
test = false
bench = false
doc = false

[dependencies]
arbitraitor-exec = { workspace = true }
arbitraitor-model = { workspace = true }
arbitraitor-plugin-api = { workspace = true }
arbitraitor-sandbox = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
# ADR-0006: Wasmtime Component Model plugin runtime. `default-features = false`
# disables WASI, ambient filesystem, networking, and all ambient capabilities —
# plugins receive zero capabilities by default. Features enabled:
#   cranelift          — optimizing compiler (required for component-model)
#   runtime            — Engine, Store, and instance management
#   component-model    — Component Model support (ADR-0006)
#   parallel-compilation — speed up compilation of large components
#   cache              — on-disk compilation cache to avoid recompilation
wasmtime = { version = ">=29", default-features = false, features = [
    "cranelift",
    "runtime",
    "component-model",
    "parallel-compilation",
    "cache",
], optional = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
wat = "1"
wit-parser = "0.252"

[build-dependencies]
wit-parser = "0.252"
