[package]
name = "arbitraitor-powershell"
description = "PowerShell script static analysis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-model = { workspace = true }
thiserror = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }
