[package]
name = "arbitraitor-receipt"
description = "Immutable scan receipt generation and verification"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-model = { workspace = true }
minisign = "0.9.1" # Receipt signing API; MIT, pure Rust, no network behavior, no native build.
serde = { workspace = true }
serde_json = { workspace = true }
serde_json_canonicalizer = "0.3.2" # RFC 8785 JCS canonical receipt bytes for signatures.
thiserror = { workspace = true }
url = { workspace = true } # Standards-compliant URL parsing/redaction for receipt transport metadata.
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
