[package]
name = "arbitraitor-sandbox"
description = "Platform sandbox adapters for contained execution"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-model = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
