[package]
name = "arbitraitor-shell"
description = "POSIX shell script static analysis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-model = { workspace = true }
base64 = "0.22"
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
