[package]
name = "arbitraitor-shell"
description = "POSIX shell script static analysis"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-model = { workspace = true }
base64 = "0.22"
flate2 = "1.1"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
xz2 = "0.1"
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }
