[package]
name = "arbitraitor-store"
description = "Content-addressed storage for quarantined artifacts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-fetch = { workspace = true }
arbitraitor-model = { workspace = true }
async-trait = { workspace = true }
cap-std = { workspace = true }
cap-tempfile = { workspace = true }
hex = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
tempfile = { workspace = true }
