[package]
name = "arbitraitor-testkit"
description = "Test utilities and fixtures for Arbitraitor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-model = { workspace = true }
arbitraitor-receipt = { workspace = true }
arbitraitor-store = { workspace = true }
