[package]
name = "arbitraitor-testkit"
description = "Test utilities and fixtures for Arbitraitor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-model = { workspace = true }
arbitraitor-receipt = { workspace = true }
arbitraitor-store = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
wiremock = "0.6"
zip = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }

[dev-dependencies]
arbitraitor-fetch = { workspace = true }
hex = { workspace = true }
