[package]
name = "arbitraitor-update"
description = "TUF-style signed update verification"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
hex = { workspace = true }
minisign-verify = "0.2.5"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { version = "0.3", features = ["parsing"] }
