[package]
name = "arbitraitor-wrapper"
description = "Downloader and tool wrapper plugin implementations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-model = { workspace = true }
arbitraitor-plugin-api = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }
