[package]
name = "arbitraitor-yarax"
description = "YARA-X rule compilation and scanning integration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbitraitor-analysis = { workspace = true }
arbitraitor-artifact = { workspace = true }
arbitraitor-model = { workspace = true }
arbitraitor-receipt = { workspace = true }
minisign = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
yara-x = { workspace = true }
arbitraitor-workspace-hack = { version = "0.1", path = "../arbitraitor-workspace-hack" }
